operator/config/istio/pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: controller-manager
  namespace: system
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    "8080":
      mode: PERMISSIVE
  selector:
    matchLabels:
      app.kubernetes.io/component: lifecycle-manager.kyma-project.io
