operator/config/istio/gataway.yaml
# Use this Gateway for setup with watcher enabled if there is no istio gateway configured
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: lifecycle-manager-kyma-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
